--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -921,6 +921,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 577,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['rag', 'doll', 'toy']"
+      ]
+     },
+     "execution_count": 577,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clusters[i_clusters[rev_nouns.index('toy')]]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1403,7 +1423,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5. (1 балл)** Сгруппируйте полученные коллокации по NE, выведите примеры для 5 товаров."
+    "**5. (1 балл)** Сгруппируйте полученные коллокации по NE, выведите примеры для 5 товаров.\n",
+    "\n",
+    "Два варианта: с учётом синонимов, полученных кластеризацией, и без их учёта.  \n",
+    "Сначала без:"
    ]
   },
   {
@@ -1446,7 +1469,9 @@
   {
    "cell_type": "code",
    "execution_count": 570,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1507,7 +1532,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Результаты вышли хуже, чем я ожидала. Возможно, из-за того, что при пос-теггинге просочилось много мусора, я не смогла адекватно оценить метрики на топ-15 коллокаций и выбрала не самую хорошую. Или, возможно, сам подход с кластеризацией себя не оправдал"
+    "Результаты вышли хуже, чем я ожидала. Возможно, из-за того, что при пос-теггинге просочилось много мусора, я не смогла адекватно оценить метрики на топ-15 коллокаций и выбрала не самую хорошую.\n",
+    "\n",
+    "Также надо отметить, что подход с кластеризацией себя не оправдал. Возможно, стоило брать n синонимов через векторные модели или WordNet."
    ]
   },
   {
